Bug 84844 - SIDEBAR: Color pickers are using the old design
Summary: SIDEBAR: Color pickers are using the old design
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: All All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks: Color-Picker-Widget Sidebar-Properties
  Show dependency treegraph
 
Reported: 2014-10-09 15:48 UTC by Gabriel Diosan
Modified: 2020-12-27 19:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of Background Colour Chooser in Sidebar (125.73 KB, image/png)
2014-10-09 15:48 UTC, Gabriel Diosan
Details
Screenshot of Background Colour Chooser in Top Toolbar (143.79 KB, image/png)
2014-10-09 15:49 UTC, Gabriel Diosan
Details
Screenshot of Background colour picker sidebar icon (252.58 KB, image/png)
2014-11-01 11:22 UTC, Gabriel Diosan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Diosan 2014-10-09 15:48:09 UTC
Created attachment 107621 [details]
Screenshot of Background Colour Chooser in Sidebar

Problem description: Background colour chooser in Libreoffice Writer 4.4 side bar is inconsistent with "Font Colour" and "Highlighting" colour choosers

Steps to reproduce:
1. Open Libreoffice Writer
2. Go to the side bar and click on "Background Colour"
3. The colour chooser appears.

Current behavior: 

The colour chooser that appears when you click on the "Background Colour" icon is different to the colour chooser for "Font Colour" and "Highlighting", both of which use the new colour chooser. 
The colour chooser is also different to the "Background Colour" colour chooser when clicking on "Background Colour" in the top toolbar.

Expected behavior: 

The "Background Colour" chooser in the side bar should be consistent in design with the "Font Colour" and "Highlighting" colour choosers.

Tested on Lubuntu 14.04.
Comment 1 Gabriel Diosan 2014-10-09 15:49:30 UTC
Created attachment 107623 [details]
Screenshot of Background Colour Chooser in Top Toolbar
Comment 2 tommy27 2014-10-13 05:47:10 UTC
the "color picker" from the toolbar has been changed in LibO 4.4.x

I tested under Win7x64 with 4.4.0.0.alpha0+
Build ID: 9177329a425cf70b515d1f266132838894fe54c6
TinderBox: Win-x86@42, Branch:master, Time: 2014-10-06_00:13:13

In my computer the color pickers have the same new look either in the toolbar or in the sidebar, while the color picker from the sidebar in your screenshot still has the old look.

so basically the issue is that the sidebar color picker should show the same new design of the toolbar new color pickers.

I edited summary notes.

@Gabriel
please grab a new daily Linux build and retest. when you have done give feedback
and paste you build informations from the Help/About menu here.

@Jay
could you please retest under Linux and tell if you have the same problem Gabriel reported? I don't reproduce it under Windows.
Comment 3 Yousuf Philips (jay) (retired) 2014-10-13 07:00:40 UTC
Confirmed on Windows (2014-10-04@39) and Linux with master.

Version: 4.4.0.0.alpha0+
Build ID: 227ca23324fabd77abae1b7eb6186ba11d519fae
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-09_14:20:58
Comment 4 Gabriel Diosan 2014-10-13 16:26:42 UTC
Hi Tommy & Jay

I installed the latest daily build and the colour picker for background colour in the side bar is still using the old design.

Libreoffice build:

Version: 4.4.0.0.alpha0+
Build ID:eadc132d5fa339b6fe5b2f8bb482ed30dbd23147
TinderBox:Linux-rpm_deb-x86_64@46-TDF,Branch:master,Time:2014-10-13_06:27:46

Testing environment:

Lubuntu 14.04 64Bit (VM)
Comment 5 Maxim Monastirsky 2014-10-22 18:14:54 UTC
I'll take this one.
Comment 6 Yousuf Philips (jay) (retired) 2014-10-22 20:10:46 UTC
Hi Maxim,

Just a heads up that there is a background color drop down also in the area and line sections of the properties pane, in case they are not all the same. :D
Comment 7 Maxim Monastirsky 2014-10-22 20:19:25 UTC
(In reply to Jay Philips from comment #6)
> Hi Maxim,
> 
> Just a heads up that there is a background color drop down also in the area
> and line sections of the properties pane, in case they are not all the same.
> :D
Yes I know, and there are two additional in Calc in the "Cell Appearance" panel. Unfortunately each of them needs to be converted separately.
Comment 8 Maxim Monastirsky 2014-10-22 20:29:00 UTC
OK, so I converted the paragraph background picker:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2b84636b3baf344cbc8f709478714ddea7caced

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f06a0988d39dddcd14c9424dd48e2990cf8351f

If this works well, I can continue with the conversion of the rest.
Comment 9 Maxim Monastirsky 2014-10-24 09:00:45 UTC
Here is another related commit:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=518b30527955276363f2cd6ccb5019d15de51413

It's a preparation for the area color conversion. As a side effect it's now possible to add a button that open the new color picker for fill color to any toolbar. The command is .uno:FillColor.
Comment 10 Yousuf Philips (jay) (retired) 2014-10-24 17:13:12 UTC
Looks good Maxim.
Comment 11 Gabriel Diosan 2014-10-25 11:46:46 UTC
I tried out a new daily build on a Ubuntu Gnome 14.10 install and the colour pickers do not work (in the sidebar or in the top tool bar). If you click on the buttons there is no drop down.

Can anyone else confirm whether they are experiencing this problem? If so, should I open a new bug report for it?

Testing Environment:

Ubuntu Gnome 14.10 64 Bit
AMD R7 260X RadeonSI driver

Libreoffice Build:

Version: 4.4.0.0.alpha1+
Build ID: 04ea7b24ec1b5a027efa0b850f2bc3ac7116c52e
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-25_08:38:01

Also, Maxim thank you for looking into this. Really appreciate your efforts.

Gabriel
Comment 12 Yousuf Philips (jay) (retired) 2014-10-25 21:23:20 UTC
Hi Gabriel,

I think you should open up a new bug for that one and possibly try out other gnome desktops to see if the problem is limited to gnome DE.
Comment 13 Maxim Monastirsky 2014-10-25 21:52:36 UTC
(In reply to Gabriel Diosan from comment #11)
> I tried out a new daily build on a Ubuntu Gnome 14.10 install and the colour
> pickers do not work (in the sidebar or in the top tool bar). If you click on
> the buttons there is no drop down.
I had similar problem under KDE, as you can see from Bug 84676 comment 13. It could be related. Anyway it deserves a separate report.
Comment 14 Maxim Monastirsky 2014-10-26 10:40:17 UTC
Line color is now also converted:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=35ae136427b6cb71de9728f82b9364b702ea2ef5
Comment 16 Gabriel Diosan 2014-11-01 02:00:01 UTC
Hi Jay and Maxim

I notice that the background colour picker in the sidebar uses a different icon to the one in the top toolbar. Should this icon be changed for consistency?

Gabriel
Comment 17 Yousuf Philips (jay) (retired) 2014-11-01 09:35:18 UTC
Hi Gabriel,

In which icon theme is this happening? Can you attach a screenshot.
Comment 18 Gabriel Diosan 2014-11-01 11:21:00 UTC
Hi Jay

The icon theme is Tango. The icon looks similar but is much wider and displays the current colour selection. Not sure if that is intentional or a legacy of when the sidebar code was brought into Libreoffice.

I have uploaded a screenshot showing the icon.

Gabriel
Comment 19 Gabriel Diosan 2014-11-01 11:22:04 UTC
Created attachment 108754 [details]
Screenshot of Background colour picker sidebar icon
Comment 20 Yousuf Philips (jay) (retired) 2014-11-01 16:23:57 UTC
Hi Gabriel,

Yes that is how it is displayed in the sidebar. :D
Comment 21 Maxim Monastirsky 2014-11-01 17:30:03 UTC
I changed the sidebar to use the same icon as the toolbar back in February with http://cgit.freedesktop.org/libreoffice/core/commit/?id=4eb7f3911921817a8f8d56a2bafb54d1fd12afcd. The only difference is that the toolbar button is narrow so we paint the color rectangle on top of the icon, and the sidebar button is wide so we have plenty of space to paint the color rectangle near the icon.
Comment 22 Gabriel Diosan 2014-11-02 04:43:49 UTC
Hi Jay & Maxim

No worries. Thanks for the clarification. Keep up the awesome work. :)

Gabriel
Comment 23 Commit Notification 2014-11-03 20:38:44 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67340db67598b80045412ff653d399782c32f21e

Related: fdo#84844 Prepare border color status update

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2014-11-03 20:38:48 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a62553cb5bac29398cf445b8f068940e4085e001

fdo#84844 Use SvxColorToolBoxControl for border color

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2014-11-03 20:38:51 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e399602ea7aa11a81d704ff6ce8e660df4205b9

Related: fdo#84844 Get rid of ColorControl and ColorPopup

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Maxim Monastirsky 2014-11-03 20:49:54 UTC
I had to put some ugly solution for the border color to preserve the sidebar previous behavior, but it seems to work now. In the future it makes sense to refactor this code to be more universal, so we could use the same color picker in other places. (In particular - we have lots of places where we still use combo-boxes for color selection, would be great to have the same color picker there too.)
Comment 27 wentcim 2020-12-27 18:33:23 UTC Comment hidden (spam)