Related: fdo#84844 Support of Sidebar wide buttons in SvxColorToolBoxControl

The end goal is to convert the Sidebar to use
SvxColorToolBoxControl, and get rid of the Sidebar
specific color popup, so we don't need to maintain
two popups.

Change-Id: I42e5bcb611acae25f16dfe9623d19727fc39ea07